update: cleanup